<resources>
    <string name="app_name">festabook</string>


    <!--공통-->
    <string name="empty_state_message">현재 표시할 항목이 없습니다.</string>

    <!--바텀 네비게이션 바-->
    <string name="menu_home_title">홈</string>
    <string name="menu_schedule_title">일정</string>
    <string name="menu_map_title">지도</string>
    <string name="menu_news_title">소식</string>
    <string name="menu_setting_title">설정</string>


    <!-- 홈 화면 -->
    <string name="home_poster_image">poster_image</string>
    <string name="home_is_d_day">오늘</string>

    <!--한 눈에 보기 화면 -->
    <string name="place_list_title">한 눈에 보기</string>
    <string name="place_list_title_booth">부스</string>
    <string name="place_list_title_bar">주점</string>
    <string name="place_list_title_food_truck">푸드트럭</string>
    <string name="place_list_default_description">상세 정보가 아직 없습니다</string>
    <string name="place_list_default_location">미지정</string>
    <string name="place_list_default_title">플레이스 이름이 아직 없습니다</string>

    <!--플레이스 상세 화면-->
    <string name="place_detail_notice_description">최근 3개의 공지사항만 표시됩니다</string>
    <string name="place_detail_notice_title">공지사항</string>
    <string name="place_detail_default_time">미지정</string>
    <string name="place_detail_default_host">미지정</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 탐색 화면 -->
    <string name="explore_search_hint_text">어떤 축제로 떠나볼까요?</string>
    <string name="explore_festabook_logo">explore_festabook_logo</string>
    <string name="explore_no_search_result_text">철자가 맞는지 확인해주세요</string>
    <string name="explore_error_text">오류가 발생했습니다: %1$s</string>

    <!--일정 화면-->
    <string name="schedule_title">일정 타임라인</string>
    <string name="schedule_status_upcoming">예정</string>
    <string name="schedule_status_ongoing">진행중</string>
    <string name="schedule_status_completed">종료</string>

    <!--지도 화면-->
    <string name="map_request_location_permission_message">현재 위치를 확인하시려면 위치 권한이 필요합니다</string>"
    <string name="map_category_all">전체</string>
    <string name="map_category_bar">주점</string>
    <string name="map_category_food_truck">푸드트럭</string>
    <string name="map_category_booth">부스</string>
    <string name="map_category_smoking_area">흡연구역</string>
    <string name="map_category_toilet">화장실</string>
    <string name="map_category_trash">쓰레기통</string>
    <string name="map_category_stage">무대</string>
    <string name="map_category_primary">주요시설</string>
    <string name="map_category_parking">주차장</string>
    <string name="map_category_photo_booth">포토부스</string>
    <string name="map_category_extra">기타시설</string>
    <string name="map_back_to_initial_position">학교로 돌아가기</string>

    <!-- 소식 화면 -->
    <string name="news_title">소식</string>
    <string name="tab_notice">공지</string>
    <string name="tab_faq">FAQ</string>
    <string name="tab_lost_item">분실물</string>
    <string name="tab_faq_question">Q. %1$s</string>
    <string name="modal_lost_item_location">보관 장소 : %1$s</string>
    <string name="modal_lost_item_created_at">보관 일시 : %1$s</string>

    <!--분실물 화면-->
    <string name="lost_item_guide">분실물 수령/제보 가이드</string>

    <!-- 설정 화면 -->
    <string name="setting_title">설정</string>
    <string name="setting_notice_title">알림</string>
    <string name="setting_current_university_notice">현재 접속 중인 대학</string>
    <string name="setting_notice_detail">앱 알림 세부 설정</string>
    <string name="setting_app_info_title">앱 정보</string>
    <string name="setting_app_version">앱 버전</string>
    <string name="setting_service_policy">약관 및 정책</string>
    <string name="setting_contact_us">개발자 문의하기</string>
    <string name="setting_contact_us_email_subject">개발자 문의하기</string>
    <string name="setting_contact_us_email">festabook2025@gmail.com</string>
    <string name="setting_notice_enabled">알림이 설정되었습니다</string>

    <!-- icon description -->
    <string name="iv_speaker">공지 아이콘</string>
    <string name="iv_pin">고정핀 아이콘</string>
    <string name="content_description_iv_location">위치 아이콘</string>
    <string name="content_description_booth_image">부스 이미지</string>
    <string name="place_detail_no_notice">공지사항이 없습니다</string>
    <string name="refresh">새로고침</string>
    <string name="content_description_floating_action_button">플로팅 지도 버튼</string>
    <string name="move">이동</string>
    <string name="lost_item">분실물 이미지</string>
    <string name="chevron_down">펼치기</string>
    <string name="info">정보</string>
    <string name="schedule_location">위치</string>
    <string name="schedule_time">시간</string>
    <string name="all_book_mark">북마크</string>
    <string name="schedule_circle">원</string>
    <string name="logo_splash">festabook</string>

    <!--실패 시 출력 -->
    <string name="fail_snackbar_confirm">확인</string>
    <string name="error_server_exception">서버 요청에 실패했습니다. 잠시 후 다시 시도해주세요</string>
    <string name="error_client_exception">잘못된 요청입니다</string>
    <string name="error_network_exception">현재 연결이 불안정합니다. 잠시 후 다시 시도해주세요</string>
    <string name="error_unknown_exception">알 수 없는 에러가 발생했습니다 잠시 후 다시 시도해주세요</string>
    <string name="error_fail_to_load_place_info">정보를 불러오는데 실패했습니다</string>

    <!--다이어로그-->
    <string name="notification_permission_title">알림 권한 필요</string>
    <string name="notification_permission_message">새로운 소식 및 중요한 정보를 받기 위해 알림 권한이 필요합니다.</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="main_alarm_dialog_title">우리 학교 축제의\n최신 정보를 놓치지 마세요!</string>
    <string name="main_alarm_dialog_message">연예인 공연 정보, 우천 취소, 일정 변경 등 축제의 중요한 소식을 가장 빠르게 알려드릴게요.</string>
    <string name="main_alarm_dialog_confirm_button">알림 받기</string>
    <string name="main_alarm_dialog_cancel_button">다음에</string>
    <string name="item_lineup_image">item_lineup_image</string>
    <string name="home_check_schedule_text">일정 확인하기</string>
    <string name="home_lineup_title">축제 라인업</string>

    <!--토스트 메시지-->
    <string name="back_press_exit_message">뒤로가기를 한 번 더 누르면 종료됩니다.</string>
    <!--알림 권한-->
    <string name="notification_permission_denied_message">알림이 비활성화되어 있습니다 [설정]에서 다시 켤 수 있어요.</string>
    <string name="move_to_setting_text">설정으로 이동</string>

    <!--알림 -->
    <string name="default_notification_title">알림</string>
    <string name="default_notification_body">새로운 소식이 있습니다.</string>
    <string name="home_navigate_to_explore_desc">탐색 화면으로 이동하는 버튼</string>
    <string name="explore_btn_close_desc">탐색 화면 닫기 버튼</string>

    <!--앱 업데이트-->
    <string name="update_notice_title">신규 버전 출시 안내</string>
    <string name="update_notice_message">새로운 버전이 출시되었습니다.\n 더 나은 사용을 위해 앱을 업데이트해 주세요</string>
    <string name="update_notice_confirm">업데이트</string>
    <string name="update_failed_title">서버 통신 실패</string>
    <string name="update_failed_message">앱 서버에 접속할 수 없습니다. 다시 시도해주세요</string>
    <string name="update_failed_confirm">종료</string>
    <string name="explore_btn_backToMain_content_desc">홈화면으로 돌아가기</string>
    <string name="explore_toolbar_title">축제 검색</string>

    <!--전역 예외 처리기-->
    <string name="uncaught_exception_title">앗! 잠시 문제가 생겼어요</string>
    <string name="uncaught_exception_message">이용에 불편을 드려 정말 죄송합니다. \n 앱을 다시 시작해 주시면 대부분 해결되니, \n 잠시 후에 앱을 다시 실행해주세요 !</string>
    <string name="uncaught_exception_confirm">앱 재시작하기</string>
</resources>
