<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home_title" />
    <item
        android:id="@+id/item_menu_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/menu_schedule_title" />
    <item
        android:id="@+id/item_menu_map"
        android:title=""
        android:enabled="false"
        />
    <item
        android:id="@+id/item_menu_news"
        android:icon="@drawable/ic_news"
        android:title="@string/menu_news_title" />
    <item
        android:id="@+id/item_menu_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting_title" />

</menu>