<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_alarm" />

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_notice_title"
        android:gravity="center"
        android:textAppearance="@style/PretendardBold18" />

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_notice_message"
        android:textAppearance="@style/PretendardRegular14" />

    <Button
        android:id="@+id/btn_dialog_confirm"
        android:layout_width="match_parent"
        android:backgroundTint="@color/blue400"
        android:layout_height="match_parent"
        android:text="@string/update_notice_confirm"
        android:layout_marginTop="24dp"
        />

</LinearLayout>