<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gray100_stroke_gray200_radius_10dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_lost_guide_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/info"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lost_guide_title"
        style="@style/PretendardBold14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lost_item_guide"
        app:layout_constraintBottom_toBottomOf="@id/iv_lost_guide_info"
        app:layout_constraintEnd_toStartOf="@id/iv_lost_guide_expand"
        app:layout_constraintStart_toEndOf="@id/iv_lost_guide_info"
        app:layout_constraintTop_toTopOf="@id/iv_lost_guide_info" />

    <ImageView
        android:id="@+id/iv_lost_guide_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/chevron_down"
        android:src="@drawable/ic_chevron_down"
        app:layout_constraintBottom_toBottomOf="@id/tv_lost_guide_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_lost_guide_title" />

    <TextView
        android:id="@+id/tv_lost_guide_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_lost_guide_expand"
        app:layout_constraintStart_toStartOf="@id/tv_lost_guide_title"
        app:layout_constraintTop_toBottomOf="@id/iv_lost_guide_info"
        tools:text="분실물 습득/수령 가이드를 추가하여주십시오" />

</androidx.constraintlayout.widget.ConstraintLayout>